--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
         integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
         crossorigin="anonymous">
+        <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="./css/main.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="/js/go_top.js"></script>
 </head>
 <body>
@@ -256,10 +256,11 @@
             <img src="./img/tooth1.png" alt="" class="about__tooth left">
             <img src="./img/tooth1.png" alt="" class="about__tooth right">
         </section>
-        <section class="reviews section" id="carousel" data-auto="true">
+    <!-- ===================================== REVIEWS ============================================== -->
+        <section class="reviews section swiper-container">
             <h1 class="reviews__title">Почитайте відгуки задоволених клієнтів</h1>
-            <ul id="scene">
-                <li class="carousel_item">
+            <ul class="swiper-wrapper">
+                <li class="swiper-slide">
                     <div class="frame">
                         <div class="frame-text">
                             <img src="./img/rev.png" alt="" class="frame-text__png">
@@ -273,7 +274,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="carousel_item">
+                <li class="swiper-slide">
                     <div class="frame">
                         <div class="frame-text">
                             <img src="./img/rev.png" alt="" class="frame-text__png">
@@ -287,7 +288,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="carousel_item">
+                <li class="swiper-slide">
                     <div class="frame">
                         <div class="frame-text">
                             <img src="./img/rev.png" alt="" class="frame-text__png">
@@ -301,7 +302,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="carousel_item">
+                <li class="swiper-slide">
                     <div class="frame">
                         <div class="frame-text">
                             <img src="./img/rev.png" alt="" class="frame-text__png">
@@ -315,7 +316,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="carousel_item">
+                <li class="swiper-slide">
                     <div class="frame">
                         <div class="frame-text">
                             <img src="./img/rev.png" alt="" class="frame-text__png">
@@ -329,7 +330,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="carousel_item">
+                <li class="swiper-slide">
                     <div class="frame">
                         <div class="frame-text">
                             <img src="./img/rev.png" alt="" class="frame-text__png">
@@ -345,10 +346,10 @@
                 </li>
             
             </ul>
-            <div id="carousel_btn" class="reviews-button">
-                <button class="btn prev"><
+            <div class="reviews-button">
+                <button class="btn btn-prev"><
                 </button>
-                <button class="btn next">>
+                <button class="btn btn-next">>
                 </button>
             </div>
         </section>
@@ -415,8 +416,9 @@
                 </div>
             </div>
         </div>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="./js/go-top.js"></script>
-    <script src="./js/carousel.js"></script>
+    <script src="./js/swiper.js"></script>
     <script src="./js/modal.js"></script>
     <script src="./js/mobile-menu.js"></script>
 </body>
